--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -5,6 +5,11 @@
 %:§config
 %:You can do a lot of configurations on this package, and probably
 %: even more to come in later versions!
+%:=\ShowNumbers
+%: Shows the numbers in fron of the part problems and intros that should be used with
+%: \exclude and \select
+\gdef\ShowNumbers{\gdef\@displayMetaCounter{\isTrue}}
+% ---- \exercisebanksetup ----- %
 \pgfkeys{
 /exbanksetup/.is family, /exbanksetup,
 default/.style = {
@@ -40,6 +45,7 @@ switches/.cd,
   \pgfkeys{/exbanksetup, #1}%
 }
 \exercisebanksetup{default}
+\def\tighten@paragraph{\if\exbank@opt@tightenparagraphs\@isTrue\relax\filbreak\else\relax\fi}
 %: Here is a list of the different keys and their meaning
 %:\keyDef{part problems}{On/Off}{On}{
 %: This is whether or not to do part problems. E.g. 1a), 1b) etc.
