--- a/src/texpack.tex
+++ b/src/texpack.tex
@@ -1,11 +1,14 @@
 % This is the file that is built when making all these files into packaging
 %:§env=Environments
+%:$$envdefs
+%:§makingSets=Making sets
 %:§config=Configuration and options
 %:§lang=Internationalization
 %:§triggers=Triggers
 %:§ref=General reference
-%:§makingSets=Making sets
 %:§count=Counters
+%:§macroDefs=Macro definitions
+%:$$macrodefs
 %:-
 
 \input{preamble}
