Changelog: - Fixed wrong implementation of some \ifs. Closes #32 - Added \spritesets. Closes #29 - Updated files in README Commands: \isin (\strif) \spriteset \sprite
new file: helpers.tex, removed file isin.tex

--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -28,12 +28,12 @@
 
 \global\let\incl = \input
 \input{packages}
+\input{helpers}
 \input{packageoptions}
 \input{i18n}
 \input{at}
 \input{problemstyle}
 \input{envcontrol}
-\input{isin}
 \input{squeeze}
 \input{setbuilder}
 \input{pplabel}
