--- a/src/packaging/packagehead.tex
+++ b/src/packaging/packagehead.tex
@@ -19,3 +19,4 @@
 %% This work consists of all files listed in README
 %%
 \ProvidesPackage{exercisebank}[@@DATE @@VERSION Creates a setup that gives freedom in making sets and exercises.]
+\xdef\exbank@quiet{1}
