--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -35,4 +35,8 @@ v0.1.1&2018/04/13&\begin{itemize}
     \item Fixed bug that \dac{select} and \dac{exclude} not working as expected.
     \item Added \dac{ShowNumbers} for displaying numbers related to use in \dac{select} and \dac{exclude}
   \end{itemize}\\
+  @@VERSION&@@DATE&\begin{itemize}
+    \item Added custom dynamic figure path \refKey{figure root directory}.
+    \item Fixed bugs related to \dac{phead} and the commands used in \dac{makeset}-lists.
+  \end{itemize}\\
 \end{tabularx}
